# fastapi-schedule

./: .gitignore  README.md  main.py  pyproject.toml  scheduler.py
endpoints/: todos.py
services/: todo_service.py
