[tool.poetry]
name = "asaasadharana-express-backend"
version = "0.1.0"
description = "Backend for Asadharana Express"
authors = ["Your Name <your.email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "0.19.0"
fastapi = "^0.109.0"
httpx = "^0.25.2"
requests = "^2.32.3"
schedule = "^1.2.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
